Added checkboxes to add/remove letters, numbers and special characters to generated password. Also already styled a bit

--- a/html/index.html
+++ b/html/index.html
@@ -29,9 +29,18 @@
           </div>
         </div>
         <div id="checkboxes">
-          <input type="checkbox" id="checkbox_letters" />
-          <input type="checkbox" id="checkbox_numbers" />
-          <input type="checkbox" id="checkbox_special_chars" />
+          <div>
+            <input type="checkbox" id="checkbox_letters" />
+            <label for="checkbox_letters">Buchstaben</label>
+          </div>
+          <div>
+            <input type="checkbox" id="checkbox_numbers" />
+            <label for="checkbox_numbers">Zahlen</label>
+          </div>
+          <div>
+            <input type="checkbox" id="checkbox_special_chars" />
+            <label for="checkbox_special_chars">Sonderzeichen</label>
+          </div>
         </div>
       </div>
     </main>
