Added button to generate password

--- a/html/index.html
+++ b/html/index.html
@@ -42,6 +42,7 @@
             <label for="checkbox_special_chars">Sonderzeichen</label>
           </div>
         </div>
+        <button id="generate_button">Generate Password</button>
       </div>
     </main>
   </body>
