--- a/html/index.html
+++ b/html/index.html
@@ -24,13 +24,13 @@
         <div id="slider-div">
           <label for="password-length-slider">Länge</label>
           <div>
-            <input type="range" id="password-length-slider" min="8" max="64" />
-            <p id="password-length-user-input">8</p>
+            <input type="range" id="password-length-slider" min="8" max="48" />
+            <p id="password-length-user-input">X</p>
           </div>
         </div>
         <div id="checkboxes">
           <div>
-            <input type="checkbox" id="checkbox_letters" />
+            <input type="checkbox" id="checkbox_letters" checked />
             <label for="checkbox_letters">Buchstaben</label>
           </div>
           <div>
@@ -42,7 +42,9 @@
             <label for="checkbox_special_chars">Sonderzeichen</label>
           </div>
         </div>
-        <button id="generate_button">Generate Password</button>
+        <button id="generate_button" onclick="genPassword()">
+          Generate Password
+        </button>
       </div>
     </main>
   </body>
