--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,17 @@
             <input type="checkbox" id="checkbox_special_chars" />
             <label for="checkbox_special_chars">Sonderzeichen</label>
           </div>
+          <hr />
+          <div id="generateListInputDiv">
+            <input type="checkbox" id="generateList" />
+            <label for="generateList"
+              >Mehrere Passwörter in .txt speichern?</label
+            >
+          </div>
+          <div id="generateListRangeDiv">
+            <label for="generateListRange">Anzahl</label>
+            <input type="number" id="generateListRange" min="1" />
+          </div>
         </div>
         <button id="generate_button" onclick="genPassword()">
           Generate Password
