--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,9 @@
           <div id="generateListRangeDiv">
             <label for="generateListRange">Anzahl</label>
             <input type="number" id="generateListRange" min="1" />
+            <p id="generateListRangeWarning">
+              ! Bitte wähle einen Wert größer als 1 !
+            </p>
           </div>
         </div>
         <button id="generate_button" onclick="genPassword()">
