Styled input type number and added a function whichs changes the text content of the generate button depending on if we just want to generate one password or generate and download a .txt

--- a/html/index.html
+++ b/html/index.html
@@ -51,15 +51,15 @@
             <p class="label">Sonderzeichen</p>
           </div>
           <hr />
-          <div id="generateListInputDiv">
+          <div id="generateListInputDiv" class="checkbox">
             <label class="switch">
               <input type="checkbox" id="generateList" />
               <span class="slider"></span>
             </label>
-            <p class="label"></p>
+            <p class="label">Mehrere Passwörter in .txt speichern?</p>
           </div>
           <div id="generateListRangeDiv">
-            <label for="generateListRange">Anzahl</label>
+            <label for="generateListRange">Anzahl :</label>
             <input type="number" id="generateListRange" min="1" />
             <p id="generateListRangeWarning">
               ! Bitte wähle einen Wert größer als 1 !
